[tool.poetry]
name = "vaccibot"
version = "0.2.0"
description = ""
authors = ["Felix Soubelet <felix.soubelet@protonmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
requests = "^2.25"
pendulum = "^2.0"
loguru = "^0.5.3"
geopy = "^2.1.0"
pydantic = "^1.8.1"
rich = "^10.1.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = ">=19.10b0"
isort = "^5.8.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
